@@ -2,34 +2,51 @@ package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.Booking;
+import ru.practicum.shareit.booking.storage.BookingRepository;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.exception.ValidationException;
+import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.UpdateItemDto;
+import ru.practicum.shareit.item.mapper.CommentMapper;
 import ru.practicum.shareit.item.mapper.ItemMapper;
+import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
-import ru.practicum.shareit.item.storage.ItemStorage;
+import ru.practicum.shareit.item.storage.CommentRepository;
+import ru.practicum.shareit.item.storage.ItemRepository;
 import ru.practicum.shareit.user.User;
-import ru.practicum.shareit.user.storage.UserStorage;
+import ru.practicum.shareit.user.storage.UserRepository;
 
+import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
-    private final ItemStorage itemStorage;
-    private final UserStorage userStorage;
+    private final ItemRepository itemRepository;
+    private final UserRepository userRepository;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
 
     @Override
+    @Transactional
     public ItemDto create(long userId, ItemDto dto) {
-        return ItemMapper.toItemDto(itemStorage.create(ItemMapper.toItem(dto, getUser(userId))));
+        User owner = getUser(userId);
+        Item item = ItemMapper.toItem(dto, owner);
+        return ItemMapper.toItemDto(itemRepository.save(item));
     }
 
     @Override
+    @Transactional
     public ItemDto update(long userId, long itemId, UpdateItemDto dto) {
         checkUser(userId);
         Item item = getItem(itemId);
-        if (item.getOwner().getId() != userId) {
+        if (!item.getOwner().getId().equals(userId)) {
             throw new NotFoundException("Вещь с id=" + itemId + " не принадлежит пользователю");
         }
         if (dto.getName() != null) {
@@ -47,35 +64,76 @@ public class ItemServiceImpl implements ItemService {
         if (dto.getAvailable() != null) {
             item.setAvailable(dto.getAvailable());
         }
-        return ItemMapper.toItemDto(itemStorage.update(item));
+        return ItemMapper.toItemDto(itemRepository.save(item));
     }
 
     @Override
     public ItemDto getById(long itemId) {
-        return ItemMapper.toItemDto(getItem(itemId));
+        Item item = getItem(itemId);
+        ItemDto dto = ItemMapper.toItemDto(item);
+        dto.setComments(commentRepository.findByItemId(itemId).stream()
+                .map(CommentMapper::toCommentDto).toList());
+        return dto;
     }
 
     @Override
     public List<ItemDto> getByOwner(long userId) {
         checkUser(userId);
-        return itemStorage.findByOwnerId(userId).stream().map(ItemMapper::toItemDto).toList();
+        List<Item> items = itemRepository.findByOwnerId(userId);
+        LocalDateTime now = LocalDateTime.now();
+
+        return items.stream().map(item -> {
+            ItemDto dto = ItemMapper.toItemDto(item);
+            List<Booking> lastBookings = bookingRepository.findLastBooking(item.getId(), now);
+            if (!lastBookings.isEmpty()) {
+                dto.setLastBooking(lastBookings.get(0).getStart());
+            }
+            List<Booking> nextBookings = bookingRepository.findNextBooking(item.getId(), now);
+            if (!nextBookings.isEmpty()) {
+                dto.setNextBooking(nextBookings.get(0).getStart());
+            }
+            dto.setComments(commentRepository.findByItemId(item.getId()).stream()
+                    .map(CommentMapper::toCommentDto).toList());
+            return dto;
+        }).collect(Collectors.toList());
     }
 
     @Override
     public List<ItemDto> search(String text) {
         if (text == null || text.isBlank()) {
-            return List.of();
+            return Collections.emptyList();
         }
-        return itemStorage.searchAvailable(text).stream().map(ItemMapper::toItemDto).toList();
+        return itemRepository.searchAvailable(text).stream().map(ItemMapper::toItemDto).toList();
+    }
+
+    @Override
+    @Transactional
+    public CommentDto addComment(long userId, long itemId, CommentDto dto) {
+        User author = getUser(userId);
+        Item item = getItem(itemId);
+
+        List<Booking> completedBookings = bookingRepository.findCompletedBookingsForUserAndItem(itemId, userId, LocalDateTime.now());
+        if (completedBookings.isEmpty()) {
+            throw new ValidationException("Пользователь не брал эту вещь в аренду или срок аренды не завершён");
+        }
+
+        Comment comment = Comment.builder()
+                .text(dto.getText())
+                .item(item)
+                .author(author)
+                .created(LocalDateTime.now())
+                .build();
+
+        return CommentMapper.toCommentDto(commentRepository.save(comment));
     }
 
     private Item getItem(long id) {
-        return itemStorage.findById(id)
+        return itemRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Вещь с id=" + id + " не найдена"));
     }
 
     private User getUser(long id) {
-        return userStorage.findById(id)
+        return userRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id=" + id + " не найден"));
     }
 
